--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="description" content="" />
+	<meta name="author" content="" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+	<title></title>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Cormorant">
+	<link href="styles.css" rel="stylesheet" />
+</head>
+<body>
+    <div id="bottom-right">
+
+    </div>
+    <div id="top-left">
+        
+    </div>
+    <div class="container">
+        <div class="quote-container">
+            <p id="quote">I love you, Beth Mutton</p>
+            <p class="attribution" id="quote-attribution">Ben Ashley</p>
+        </div>
+    </div>
+	<script type="text/javascript" src="script.js"></script>
+</body>
+</html>
